gulpfile, readme, boiler

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Starter pack w/ sass liveserver gulp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "author": "jowd",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.5",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2"
   }
 }
